adds module definitions (WIP)