@@ -7,8 +7,12 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.zyxist.chainsaw' version '0.3.1'
+}
+
 ext {
-    awaitilityVersion = '1.7.0'
+    awaitilityVersion = '3.1.0'
     commonsCodecVersion = '1.11'
     commonsCliVersion = '1.4'
     commonsCsvVersion = '1.5'
@@ -34,7 +38,7 @@ ext {
     apiguardianVersion = '1.0.0'
     hamcrestLibraryVersion = '1.3'
     junitContractsVersion = '0.2.0'
-    junitVersion = '4.12'
+    junitVersion = '5.1.1'
     junitPlatformVersion = '1.1.1'
     logbackVersion = '1.2.3'
     mockitoVersion = '1.10.19'
@@ -48,6 +52,7 @@ allprojects { subproj ->
     apply plugin: 'maven'
     apply plugin: 'maven-publish'
     apply plugin: 'idea'
+    apply plugin: 'org.junit.platform.gradle.plugin'
 
     ext {
         vendor = 'Apache Jena'
@@ -63,11 +68,23 @@ allprojects { subproj ->
         jcenter()
     }
 
+    configurations {
+        all {
+            exclude(module: 'jsr305')
+            exclude(module: 'commons-logging')
+            exclude group: 'javax.inject', module: 'javax.inject'
+            exclude group: 'org.apache.httpcomponents', module: 'httpcore-osgi'
+            exclude group: 'org.objenesis', module: 'objenesis'
+        }
+    }
+
+    junitPlatformTest.jvmArgs("--add-modules", "java.management", "--add-modules", "java.sql")
+
     dependencies {
-        compile("org.slf4j:slf4j-api:$slf4jVersion")
-        compile("org.slf4j:slf4j-log4j12:$slf4jVersion")
-        compile("log4j:log4j:$log4jVersion")
-        testCompile("junit:junit:$junitVersion")
+        testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+        testImplementation("org.apiguardian:apiguardian-api:$apiguardianVersion")
+        testRuntime("org.junit.vintage:junit-vintage-engine:${junitVersion}")
+        testCompile("junit:junit:4.12")
         testCompile("org.hamcrest:hamcrest-core:$hamcrestLibraryVersion")
     }
 }
